--- a/nais/prod.yaml
+++ b/nais/prod.yaml
@@ -1,6 +1,7 @@
 ingresses:
   - https://kaptein.intern.nav.no
   - https://kaptein.ansatt.nav.no
+kafka_pool: nav-prod
 tenant: nav.no
 roles:
   - 1c006e8b-c667-4622-9df7-43ed2fd494d6 # KABAL_OPPGAVESTYRING_ALLE_ENHETER
