--- a/nais/nais.yaml
+++ b/nais/nais.yaml
@@ -18,6 +18,8 @@ spec:
     path: /isAlive
   readiness:
     path: /isReady
+  kafka:
+    pool: {{kafka_pool}}
   azure:
     application:
       enabled: true
