--- a/nais/nais.yaml
+++ b/nais/nais.yaml
@@ -14,6 +14,13 @@ spec:
   replicas:
     min: 2
     max: 3
+  resources:
+    limits:
+      cpu: 500m
+      memory: 1024Mi
+    requests:
+      cpu: 200m
+      memory: 512Mi
   liveness:
     path: /isAlive
   readiness:
