--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
     "paths": {
       "@/*": ["./*"]
     },
-    "types": ["@navikt/ds-react/types/theme"]
+    "types": ["@navikt/ds-react/types/theme", "bun"]
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
