--- a/nais/nais.yaml
+++ b/nais/nais.yaml
@@ -59,6 +59,7 @@ spec:
   accessPolicy:
     outbound:
       rules:
+        - application: kaptein-api
         - application: kabal-api
         - application: klage-kodeverk-api
         - application: kabal-innstillinger
