--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "@grafana/faro-react": "1.19.0",
     "@grafana/faro-web-sdk": "1.19.0",
     "@grafana/faro-web-tracing": "1.19.0",
-    "@navikt/aksel-icons": "7.30.0",
-    "@navikt/ds-css": "7.30.0",
-    "@navikt/ds-react": "7.30.0",
+    "@navikt/aksel-icons": "7.30.1",
+    "@navikt/ds-css": "7.30.1",
+    "@navikt/ds-react": "7.30.1",
+    "@navikt/next-api-proxy": "4.1.4",
     "@navikt/next-logger": "4.1.5",
     "@navikt/oasis": "3.8.0",
     "@platformatic/kafka": "1.11.0",
@@ -31,11 +32,11 @@
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.4",
-    "@navikt/ds-tailwind": "7.30.0",
+    "@navikt/ds-tailwind": "7.30.1",
     "@tailwindcss/postcss": "4.1.13",
-    "@types/bun": "1.2.21",
-    "@types/node": "24.3.1",
-    "@types/react": "19.1.12",
+    "@types/bun": "1.2.22",
+    "@types/node": "24.5.0",
+    "@types/react": "19.1.13",
     "@types/react-dom": "19.1.9",
     "pino-pretty": "13.1.1",
     "postcss": "8.5.6",
