--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "next dev --turbopack | pino-pretty",
-    "build": "next build",
+    "build": "next telemetry disable && next build",
     "start": "next start",
     "typecheck": "tsc",
     "lint": "biome check"
