--- a/.github/workflows/sanity-build.yaml
+++ b/.github/workflows/sanity-build.yaml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v4
       
       - name: Setup Bun
-        uses: oven-sh/setup-bun@v1
+        uses: oven-sh/setup-bun@v2
         with:
           bun-version: latest
           registry-url: https://npm.pkg.github.com/
@@ -30,6 +30,11 @@ jobs:
         run: |
           bun install --frozen-lockfile
           
+      - name: Build
+        shell: bash
+        run: |
+          bun run build
+          
       - name: Typecheck
         shell: bash
         run: |
@@ -41,7 +46,6 @@ jobs:
           bun run lint
     
       - name: Test
-        if: false # No unit tests yet
         shell: bash
         run: |
           bun test
