--- a/biome.json
+++ b/biome.json
@@ -117,6 +117,6 @@
     "assist": { "enabled": true }
   },
   "files": {
-    "includes": ["**", "!**/*.css", "!.bruno"]
+    "includes": ["**", "!**/*.css", "!.bruno", "!cache/config.json"]
   }
 }
