--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "next dev --turbopack | pino-pretty",
     "build": "next telemetry disable && next build",
     "start": "next start",
-    "typecheck": "tsc",
+    "typecheck": "tsc --noEmit",
     "lint": "biome check"
   },
   "dependencies": {
