--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "next telemetry disable && next build",
     "start": "next start",
     "typecheck": "tsc --noEmit",
-    "lint": "biome check"
+    "lint": "biome check",
+    "knip": "knip"
   },
   "dependencies": {
     "@grafana/faro-react": "2.1.0",
@@ -38,6 +39,7 @@
     "@types/node": "25.0.9",
     "@types/react": "19.2.8",
     "@types/react-dom": "19.2.3",
+    "knip": "5.82.0",
     "pino-pretty": "13.1.3",
     "postcss": "8.5.6",
     "tailwindcss": "4.1.18",
