--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "knip": "knip"
   },
   "dependencies": {
-    "@grafana/faro-react": "2.1.0",
     "@grafana/faro-web-sdk": "2.1.0",
     "@grafana/faro-web-tracing": "2.1.0",
     "@navikt/aksel-icons": "8.0.0",
@@ -20,14 +19,12 @@
     "@navikt/ds-react": "8.0.0",
     "@navikt/next-logger": "4.4.5",
     "@navikt/oasis": "4.1.1",
-    "@platformatic/kafka": "1.23.0",
-    "@sinclair/typebox": "0.34.47",
     "date-fns": "4.1.0",
     "echarts": "6.0.0",
     "next": "16.1.3",
-    "next-auth": "4.24.13",
     "nuqs": "2.8.6",
     "pino": "10.2.0",
+    "prom-client": "15.1.3",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
@@ -42,6 +39,7 @@
     "knip": "5.82.0",
     "pino-pretty": "13.1.3",
     "postcss": "8.5.6",
+    "postcss-load-config": "6.0.1",
     "tailwindcss": "4.1.18",
     "typescript": "5.9.3"
   }
