--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-  "$schema": "https://biomejs.dev/schemas/2.3.11/schema.json",
+  "$schema": "https://biomejs.dev/schemas/2.4.0/schema.json",
   "root": true,
   "vcs": {
     "enabled": true,
@@ -45,7 +45,6 @@
       },
       "nursery": {
         "useExplicitType": "off",
-        "noImportCycles": "on",
         "useSortedClasses": { "level": "on", "fix": "safe", "options": {} }
       },
       "correctness": {
@@ -76,7 +75,8 @@
         "noConsole": { "level": "error", "options": { "allow": ["debug", "info", "warn", "error", "[level]"] } },
         "noReactSpecificProps": "off",
         "noEmptyBlockStatements": "error",
-        "noFocusedTests": "error"
+        "noFocusedTests": "error",
+        "noImportCycles": "on"
       },
       "complexity": {
         "useSimplifiedLogicExpression": "off",
